NodeAffinity1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: proxy
spec:
  containers:
    - name: mynginx
      image: nginx
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
             - key: slave1
               operator: In
               values:
                 - intelliqit1
