RequestsandLimits1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  labels:
    app: webserver
spec:
  containers:
    - name: myhttpd
      image: httpd
      resources:
        requests:
          cpu: "200m"
          memory: "64Mi"
        limits:
          cpu: "500m"
          memory: "128Mi"
...
