Volumes3.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
   app: proxy
spec:
  containers:
    - name: mynginx
      image: nginx
      volumeMounts: 
       - name: my-volume
         mountPath: /usr/share/nginx/html
  volumes:
    - name: my-volume
      persistentVolumeClaim:
       claimName: my-pvc
...
