green-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-nginx-deployment
  labels:
    app: proxy
    author: intelliqit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      name: nginx-pod
      labels:
        app: proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
...
