pod-definition1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: proxy
    author: intelliqit
spec:
  containers:
    - name: mynginx
      image: nginx
...
