pod-definition4.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    type: appserver
    author: intelliqit
spec:
  containers:
    - name: mytomcat
      image: tomee
      ports:
        - containerPort: 8080
          hostPort: 8080
