pod-definition5.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  namespace: test-ns
  labels:
    app: webserver
    author: intelliqit
spec:
  containers:
   - name: myhttpd
     image: httpd
     ports:
      - containerPort: 80
        hostPort: 8080
...
