service2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  labels:
    author: intelliqit
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30009
  selector:
    app: proxy
...
