ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: my-ingress
spec:
  rules:
    - host: amazon.tomcat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
